# cuda-ffi

./: .cirun.yml  .clangd  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: labels.yml
.github/workflows/: build.yml  labels.yml
cudaffi/: args.py  core.py  device.py  memory.py  module.py  plan.py  utils.py
cudaffi/datatypes/: __init__.py  array_type.py  base.py  bytearray_type.py  bytes_type.py  float_type.py  int_type.py  memory_type.py  numpy_type.py  str_type.py
cudaffi/graph/: graph.py  kernel.py  malloc.py  memcpy.py  memset.py
docs/: gen_ref_pages.py  index.md
tests/: args_test.py  conftest.py  core_test.py  data_test.py  datatype_test.py  device_test.py  graph_test.py  memory_test.py  module_test.py  plan_test.py
tests/helpers/: doublify.cu  one_arg.cu  print_buf.cu  saxpy_inout.cu  simple.cu  string_arg.cu  strstr.cu
tests/helpers/include/: dummy.h
types/cuda/: cuda.pyi  cudart.pyi  nvrtc.pyi
